--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 
 android {
@@ -29,6 +30,8 @@ android {
 
 dependencies {
 
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     ext {
         core_version = "1.2.0"
         appcompat_version = "1.1.0"
@@ -36,6 +39,7 @@ dependencies {
         constraint_version = "1.1.3"
         lifecycle_version = "2.2.0"
         material_version = "1.1.0"
+        nav_version = "2.3.0-alpha04"
         dagger_version = "2.27"
         view_pager_version = "1.0.0"
         junit_version = "4.12"
@@ -46,7 +50,7 @@ dependencies {
     }
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //Core Libs
     implementation "androidx.appcompat:appcompat:$appcompat_version"
@@ -65,6 +69,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
+    //Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
     //Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
 
@@ -72,7 +80,6 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "androidx.room:room-compiler:$room_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
-
 
 
     //Unit tests
@@ -84,4 +91,6 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "androidx.test:runner:$runner_version"
     androidTestImplementation "androidx.test:rules:$runner_version"
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
 }
