--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,6 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     ext {
         core_version = "1.2.0"
         appcompat_version = "1.1.0"
@@ -41,6 +38,7 @@ dependencies {
         lifecycle_version = "2.2.0"
         material_version = "1.1.0"
         nav_version = "2.3.0-alpha04"
+        preference_version = "1.0.0"
         dagger_version = "2.27"
         view_pager_version = "1.0.0"
         junit_version = "4.12"
@@ -73,6 +71,9 @@ dependencies {
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    //Preferences
+    implementation "androidx.preference:preference-ktx:$preference_version"
 
     //Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
