--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 
 }
 
@@ -59,6 +66,8 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
     implementation "com.google.android.material:material:$material_version"
     implementation "androidx.viewpager2:viewpager2:$view_pager_version"
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
     //Room
     implementation "androidx.room:room-runtime:$room_version"
