--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,10 +45,10 @@ dependencies {
         lifecycle_version = "2.2.0"
         material_version = "1.1.0"
         nav_version = "2.3.0-alpha04"
-        preference_version = "1.0.0"
+        preference_version = '1.1.0'
         dagger_version = "2.27"
         view_pager_version = "1.0.0"
-        junit_version = "4.12"
+        junit_version = '4.13'
         ext_junit = "1.1.1"
         runner_version = "1.2.0"
         espresso_version = "3.2.0"
@@ -76,6 +76,8 @@ dependencies {
     //ViewModel & LiveData
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+
 
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -90,7 +92,6 @@ dependencies {
     //Annotation Processors
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "androidx.room:room-compiler:$room_version"
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
 
     //Unit tests
